--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,18 @@
 {
+  "extends": "eslint:recommended",
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 7,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+      "experimentalObjectRestSpread": true
     }
   },
   "env": {
     "es6": true
   },
   "globals": {
+    "window": true
   },
   "plugins": [
   ],
