--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.20.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.9",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "eslint": "^3.12.2",
     "eslint-loader": "^1.6.1",
     "html-webpack-plugin": "^2.24.1",
@@ -31,6 +35,7 @@
     "yargs": "^6.5.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.20.0",
     "d3": "^4.4.0",
     "lodash": "^4.17.2"
   }
